syntax = "proto3";

option go_package = "./employmentService";
// service structure

message EmployeeRequest{
  string name = 1;
  repeated string skills = 2;
  string email = 3;
}

message BasicResponse{
  string message = 1;

}

message EmploymentRequest{
  string companyName = 1;
  string departmentName = 2;
  string email = 3;
}

message DepartmentRequest{
  string companyName = 1;
  string depName = 2;
  repeated string requiredSkills = 3;
}

message CompanyRequest{
  string name = 1;

}

service EmploymentCenter{
  rpc RegisterCompany(CompanyRequest) returns (BasicResponse);
  rpc RegisterEmployee(EmployeeRequest) returns (BasicResponse);
  rpc CreateNewDepartment(DepartmentRequest) returns (BasicResponse);
  rpc EmployPerson(EmploymentRequest) returns (BasicResponse);
}
